--- a/base_view_inheritance_extension/i18n/base_view_inheritance_extension.pot
+++ b/base_view_inheritance_extension/i18n/base_view_inheritance_extension.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 13.0\n"
+"Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,6 +14,21 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: base_view_inheritance_extension
+#: model:ir.model.fields,field_description:base_view_inheritance_extension.field_ir_ui_view__display_name
+msgid "Display Name"
+msgstr ""
+
+#. module: base_view_inheritance_extension
+#: model:ir.model.fields,field_description:base_view_inheritance_extension.field_ir_ui_view__id
+msgid "ID"
+msgstr ""
+
+#. module: base_view_inheritance_extension
+#: model:ir.model.fields,field_description:base_view_inheritance_extension.field_ir_ui_view____last_update
+msgid "Last Modified on"
+msgstr ""
+
+#. module: base_view_inheritance_extension
 #: model_terms:ir.ui.view,arch_db:base_view_inheritance_extension.view_partner_simple_form
 msgid "Partner form"
 msgstr ""
@@ -21,6 +36,11 @@ msgstr ""
 #. module: base_view_inheritance_extension
 #: model_terms:ir.ui.view,arch_db:base_view_inheritance_extension.view_partner_simple_form
 msgid "Phone numbers"
+msgstr ""
+
+#. module: base_view_inheritance_extension
+#: model:ir.model.fields,field_description:base_view_inheritance_extension.field_ir_ui_view__smart_search
+msgid "Smart Search"
 msgstr ""
 
 #. module: base_view_inheritance_extension
